test/conformance/chainsaw/cel/time/expired-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: expired-cm
  annotations:
    expires-at: "2020-01-01T00:00:00Z"
data:
  key: value
