test/conformance/chainsaw/cel/time/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cel-time
spec:
  concurrent: false
  steps:
  - name: create-policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-expiry
  - name: create-expired-configmap
    try:
    - create:
        file: expired-configmap.yaml
        expect:
        - check:
            ($error != null): true
  - name: create-valid-configmap
    try:
    - create:
        file: valid-configmap.yaml
